<resources>
    <string name="app_name">Test-App-Movies</string>

    <string name="base_url">https://api.themoviedb.org/</string>
    <string name="api_key">b840291bf088daba81f11894bc1709db</string>
    <string name="db_name">movies_db.db</string>
    <string name="image_url">https://image.tmdb.org/t/p/w500/%s</string>

    <string name="status">Status</string>
    <string name="budget">Budget</string>
    <string name="revenue">Revenue</string>
    <string name="overview">Overview</string>
    <string name="keywords">Keywords</string>
    <string name="network">Network</string>
    <string name="user_score">User Score</string>

    <string name="not_rated">NR</string>

    <string name="tv">TV</string>
    <string name="theatres">Theatres</string>

    <string name="whats_popular">Popular</string>
    <string name="today_on">Today on</string>
    <string name="top_rated">Top rated</string>

    <string name="watchlist">Watchlist</string>

    <string name="not_found">Movies not found</string>
    <string name="add_to_watchlist">Add to Watchlist</string>
    <string name="remove">Remove</string>
    <string name="already_saved_format">%s already saved</string>
    <string name="saved_fortam">%s saved</string>

    <string name="release_date_format">%s | %sm</string>
    <string name="percentage">%s%%</string>


</resources>