<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/srl_refresh_details"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.details.DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_details"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            style="@style/toolbar_background"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view_details"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_bar_details"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            style="@style/background_view">


            <ImageView
                android:id="@+id/iv_image_back_details"
                android:layout_width="0dp"
                android:layout_height="182dp"
                android:layout_marginStart="66dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@color/white"/>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guide_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.50"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toTopOf="@+id/iv_image_back_details"
                app:layout_constraintBottom_toBottomOf="@+id/iv_image_back_details"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guide_details"
                android:background="@drawable/fade_effect_left_sunrise"/>

            <ImageView
                android:id="@+id/iv_image_details"
                android:layout_width="100dp"
                android:layout_height="150dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="16dp"
                android:src="@color/black"/>


            <TextView
                android:id="@+id/tv_title_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_image_back_details"
                android:layout_margin="16dp"
                style="@style/text_view"
                android:text="Iron Man 2"
                android:gravity="center"
                android:textSize="26sp"
                android:textStyle="bold"
                android:maxLines="2"
                android:ellipsize="end"/>


            <com.features.test_app_movies.app.customViews.PopularityView
                android:id="@+id/pv_popularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_details"
                android:layout_margin="16dp"/>


            <TextView
                android:id="@+id/tv_score_title_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@+id/pv_popularity"
                app:layout_constraintBottom_toBottomOf="@+id/pv_popularity"
                app:layout_constraintStart_toEndOf="@+id/pv_popularity"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:textSize="24sp"
                android:textStyle="bold"
                android:text="@string/user_score"
                style="@style/text_view"/>



            <LinearLayout
                android:id="@+id/ll_details_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pv_popularity"
                android:layout_marginTop="16dp"
                android:orientation="vertical"
                style="@style/details_container">

                <TextView
                    android:id="@+id/tv_date_runtime_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="12/12/2020 * 2h 31m"
                    style="@style/text_view"
                    android:maxLines="1"
                    android:ellipsize="end"/>

                <TextView
                    android:id="@+id/tv_genre_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:gravity="center"
                    android:textSize="18sp"
                    android:text="Thriller, Crime, Action"
                    style="@style/text_view"
                    android:maxLines="1"
                    android:ellipsize="end"/>


            </LinearLayout>


            <TextView
                android:id="@+id/tv_tagline_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/ll_details_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="16dp"
                android:text="A new era of wonder begins."
                android:textSize="18sp"
                android:maxLines="2"
                android:ellipsize="end"
                style="@style/text_view"/>

            <TextView
                android:id="@+id/tv_overview_title_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_tagline_details"
                android:layout_margin="16dp"
                android:text="@string/overview"
                android:textStyle="bold"
                android:textSize="20sp"
                android:maxLines="1"
                android:ellipsize="end"
                style="@style/text_view"/>

            <TextView
                android:id="@+id/tv_overview_details"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_title_details"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                android:text="bld asd asd ad asd ad asd asd asd ddasda sd asd asd asdasdasdasa bla bla bla bla bla lsd sad asd asd asd asd asd asd asd ads asd asd                     asdasda sd asd asd asd asd asd asd asd asd asd d"
                android:textSize="18sp"
                android:maxLines="5"
                android:ellipsize="end"
                style="@style/text_view"/>

            <LinearLayout
                android:id="@+id/ll_budget_titles_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_overview_details"
                android:layout_margin="16dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/budget"
                    android:layout_marginEnd="4dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    style="@style/text_view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/revenue"
                    android:layout_marginStart="4dp"
                    android:textStyle="bold"
                    android:textSize="20sp"
                    style="@style/text_view"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_budget_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_budget_titles_container"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="16dp"
                android:layout_marginStart="16sp"
                android:layout_marginEnd="16sp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1 000 S"
                    android:layout_marginEnd="4dp"
                    android:textSize="18sp"
                    style="@style/text_view" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="1 000 S"
                    android:layout_marginStart="4dp"
                    android:textSize="18sp"
                    style="@style/text_view"/>

            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>